--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,15 @@ body {
 }
 
 .title {
+  font-size: 25px;
   Text-align: center;
   color: blue;
-  margin: 2%;
+  margin: 0%;
   background-color: rgb(247, 250, 250);
 }
+
 p {
+
   Text-align: center; 
   margin: 0%;
 }
@@ -27,6 +30,7 @@ p {
 }
 
 .title2 {
+  font-size: 20px;
   Text-align: center;
   color: rgb(0, 76, 255);
   margin: 0%;
@@ -35,6 +39,7 @@ p {
 }
 
 h2 {
+  font-size: 20px;
   background-color: rgb(124, 115, 165);
   Text-align: center; 
 }
@@ -71,4 +76,8 @@ button {
 .lastmessage{
   font-size: 30px;
   color: rgb(0, 179, 255);
+}
+
+.no {
+  font-size: 20px;
 }
